--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,98 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul ul {
+  margin-left: 40px;
+  list-style-type: disc;
+  margin-bottom: 10px;
+}
+
+ul li {
+  font-size: 16px;
+}
+
+.text-bold {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.header {
+  background-color: brown;
+  height: 40px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.container {
+  padding: 50px;
+}
+
+.crud-container>* {
+  margin-bottom: 20px;
+}
+
+.crud-container table {
+  border-collapse: collapse;
+  width: 50%;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.crud-container tr td,
+.crud-container tr th {
+  border: solid 1px #000;
+  padding: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.crud-container button {
+  padding: 4px;
+  cursor: pointer;
+  margin-left: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.crud-container input {
+  width: 100%;
+  height: 20px;
+  cursor: pointer;
 }
 
-.card {
-  padding: 2em;
+.error {
+  color: red;
 }
 
-.read-the-docs {
-  color: #888;
+.items-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: stretch;
+  gap: 20px;
+}
+
+.items-container>div {
+  width: 300px;
+  height: 300px;
+  border: solid 1px grey;
+}
+
+.js_content {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  border: solid 1px grey;
+  border-radius: 3px;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  padding: 10px;
+}
+.js_content_left , .js_content_right{
+  padding: 8px
 }
